ft: fix signin/signup form alignment
 - fix signin/signup form alignment

[Delivers #170687888]

--- a/frontend/styles/profile.sass
+++ b/frontend/styles/profile.sass
@@ -2,6 +2,7 @@
   display: flex
   flex-direction: column
   align-items: center
+  justify-content: center
   width: 30vw
   height: 80vh
   margin: 5vh auto
@@ -15,29 +16,21 @@
     display: flex
     align-items: center
     text-transform: capitalize
-    height: 5rem
     font-size: 2rem
-    margin-top: 6rem
+    margin-bottom: 10px
 
   &__input_container
-    margin: 1rem auto
+    margin: 5px auto
 
   &__input
     width: 100%
     margin: 0 auto
 
   &__button_container
-    margin: 2rem auto
+    margin: 1rem auto
 
   &__button
     width: 100%
 
   &__link_container
     font-size: 1.1rem
-
-.tt
-  background-color: inherit
-  color: white
-  font-size: inherit
-  width: 5rem
-  padding: 1rem
